--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -3,26 +3,33 @@
 {%- assign s = section.settings -%}
 
 <style>
-  #Section-{{ section.id }} {
-    --header-bg: {{ s.bg_color }};
-    --header-text: {{ s.text_color }};
-    --header-accent: {{ s.accent_color }};
-    --header-border: {{ s.border_color }};
+  #Section-{{ section.id }}, #Section-banner-{{ section.id }} {
+    --bg-gradient-start: {{ 'var(--color-tertiary-background)' }};
+    --bg-gradient-end: {{ 'var(--color-primary-background)' }};
+    --header-bg: {{ 'var(--color-primary-background)' }};
+    --header-text: {{ 'var(--color-tertiary-text)' }};
+    --header-accent: {{ 'var(--color-tertiary-meta)' }};
+    --header-border: {{ '#EFE8E1' }};
     --font-logo: {{ settings.type_heading_font.family }}, {{ settings.type_heading_font.fallback_families }};
     --font-nav: {{ settings.type_main_font.family }}, {{ settings.type_main_font.fallback_families }};
   }
-</style>
+</style> 
 
-<div id="Section-{{ section.id }}" class="shiny-header-wrapper" data-section-id="{{ section.id }}" data-section-type="header">
+<div 
+  id="Section-{{ section.id }}" 
+  class="shiny-header-wrapper" 
+  data-section-id="{{ section.id }}" 
+  data-section-type="header"
+  {% if s.show_banner == false %}
+    style="box-shadow: 0 6px 8px #19191914; margin-bottom: 32px;"  
+  {% endif %}
+  >
+
   <header class="shiny-header">
     <div class="shiny-container">
 
       <a href="{{ routes.root_url }}" class="shiny-logo">
-        {% if s.logo_text != blank %}
-          {{ s.logo_text | replace: '<br>', ' <br>' | replace: '<br/>', ' <br/>' }}
-        {% else %}
           ✧ Shiny <br>Storm
-        {% endif %}
       </a>
 
       <nav class="shiny-nav">
@@ -51,54 +58,172 @@
   </header>
 </div>
 
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+  const headerWrapper = document.getElementById("Section-{{ section.id }}");
+  const bannerSection = document.getElementById("Section-banner-{{ section.id }}");
+  
+  let lastScrollY = window.scrollY;
+  let ticking = false;
+  const threshold = 50; 
+
+  function adjustLayout() {
+    if (!headerWrapper) return;
+    const headerHeight = headerWrapper.offsetHeight;
+    
+    if (bannerSection) {
+      bannerSection.style.top = headerHeight + "px";
+      
+      document.body.style.paddingTop = (headerHeight + bannerSection.offsetHeight) + "px";
+    } else {
+      document.body.style.paddingTop = headerHeight + "px";
+    }
+  }
+
+  adjustLayout();
+  window.addEventListener('resize', adjustLayout);
+
+  window.addEventListener("scroll", function() {
+    if (!ticking) {
+      window.requestAnimationFrame(function() {
+        const currentScrollY = window.scrollY;
+
+        if (bannerSection) {
+
+          if (currentScrollY > threshold && currentScrollY > lastScrollY) {
+            bannerSection.classList.add("banner-hidden");
+          } 
+          
+          else if (currentScrollY <= 20) {
+             bannerSection.classList.remove("banner-hidden");
+          }
+          
+        }
+
+        lastScrollY = currentScrollY;
+        ticking = false;
+      });
+      ticking = true;
+    }
+  });
+});
+</script>
+{% if s.show_banner %}
+  
+  {% assign start_seconds = s.start_date_text | date: '%s' | plus: 0 %}
+  {% assign end_seconds = s.end_date_text | date: '%s' | plus: 0 %}
+
+  {% if start_seconds <= end_seconds %}
+    <div id="Section-banner-{{ section.id }}" class="sold-out-banner-section">
+      <section class="banner">
+        <div class="container">
+          <div class="content">
+            
+            <div class="lastHours">
+              {{ s.icon_svg }}
+              <p class="mainText">{{ s.main_text }}</p>
+            </div>
+
+            <p class="unitsText">{{ s.units_text }}</p>
+
+            </div>
+              <div class="progressBar">
+            <div class="progressFill" id="reajust-progressBar" style="width: 0%"></div>
+          </div>
+
+        </div>
+      </section>
+    </div>
+  {% endif %}
+
+  <script>
+    function clamp01(x) {
+      return Math.min(1, Math.max(0, x));
+    }
+
+    function percentElapsedAEST(startAest, endAest) {
+      const start = new Date(startAest);
+      const end = new Date(endAest);
+      const now = new Date();
+
+      const total = end - start;
+      if (total <= 0) return 100;
+
+      const progress = clamp01((now - start) / total);
+      return progress * 100;
+    }
+
+    const start = "{{ s.start_date_text }}".trim().replace(" ", "T") + "+10:00";
+    const end   = "{{ s.end_date_text }}".trim().replace(" ", "T") + "+10:00";
+
+    const progressBar = document.getElementById("reajust-progressBar");
+    if (progressBar) {
+      progressBar.style.width = percentElapsedAEST(start, end).toFixed(0) + "%";
+    }
+  </script>
+{% endif %}
+
 {% schema %}
 {
   "name": "Header Custom",
   "settings": [
     {
       "type": "header",
-      "content": "Conteúdo"
-    },
-    {
-      "type": "html",
-      "id": "logo_text",
-      "label": "Logo em Texto",
-      "info": "Use <br> para quebra de linha em Desktop. Ele será removido automaticamente no Mobile.",
-      "default": "✧ Shiny <br>Storm"
+      "content": "Content"
     },
     {
       "type": "link_list",
       "id": "main_linklist",
-      "label": "Menu Principal",
+      "label": "Main menu",
       "default": "main-menu"
     },
     {
       "type": "header",
-      "content": "Cores"
+      "content": "Banner - Adjustment"
     },
     {
-      "type": "color",
-      "id": "bg_color",
-      "label": "Fundo",
-      "default": "#FFFFFF"
+      "type": "html",
+      "id": "icon_svg",
+      "label": "Icon (SVG)",
+      "default": "<svg width=\"11\" height=\"14\" viewBox=\"0 0 11 14\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\"><path d=\"M2.99984 8.33329C3.44186 8.33329 3.86579 8.1577 4.17835 7.84514C4.49091 7.53258 4.6665 7.10865 4.6665 6.66663C4.6665 5.74663 4.33317 5.33329 3.99984 4.66663C3.28517 3.23796 3.8505 1.96396 5.33317 0.666626C5.6665 2.33329 6.6665 3.93329 7.99984 4.99996C9.33317 6.06663 9.99984 7.33329 9.99984 8.66663C9.99984 9.27946 9.87913 9.8863 9.64461 10.4525C9.41009 11.0187 9.06634 11.5331 8.633 11.9665C8.19966 12.3998 7.68521 12.7435 7.11903 12.9781C6.55284 13.2126 5.94601 13.3333 5.33317 13.3333C4.72034 13.3333 4.1135 13.2126 3.54731 12.9781C2.98113 12.7435 2.46668 12.3998 2.03334 11.9665C1.6 11.5331 1.25625 11.0187 1.02173 10.4525C0.787211 9.8863 0.666504 9.27946 0.666504 8.66663C0.666504 7.89796 0.955171 7.13729 1.33317 6.66663C1.33317 7.10865 1.50877 7.53258 1.82133 7.84514C2.13389 8.1577 2.55781 8.33329 2.99984 8.33329Z\" stroke=\"#FF6900\" stroke-width=\"1.33333\" stroke-linecap=\"round\" stroke-linejoin=\"round\"/></svg>"
     },
     {
-      "type": "color",
-      "id": "text_color",
-      "label": "Links e Ícones",
-      "default": "#25211D"
+      "type": "text",
+      "id": "main_text",
+      "label": "Main text",
+      "default": "Last hours before price adjustment!"
     },
     {
-      "type": "color",
-      "id": "accent_color",
-      "label": "Accent (Logo/Hover)",
-      "default": "#5F09D2"
+      "type": "text",
+      "id": "units_text",
+      "label": "Units text",
+      "default": "Only 162 units left"
     },
     {
-      "type": "color",
-      "id": "border_color",
-      "label": "Borda Inferior",
-      "default": "#E5E5E5"
+      "type": "header",
+      "content": "Style"
+    },
+    {
+      "type": "checkbox",
+      "id": "show_banner",
+      "label": "Show banner",
+      "default": true
+    },
+    {
+      "type": "text",
+      "id": "start_date_text",
+      "label": "Start date",
+      "placeholder": "YYYY-MM-DD HH:MM:SS",
+      "default": "2026-01-01 00:00:00",
+      "visible_if": "{{ section.settings.show_banner }}"
+    },
+    {
+      "type": "text",
+      "id": "end_date_text",
+      "label": "End date",
+      "placeholder": "YYYY-MM-DD HH:MM:SS",
+      "default": "2027-01-01 00:00:00",
+      "visible_if": "{{ section.settings.show_banner }}"
     }
   ],
   "presets": [
